--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,13 @@
-name: Manage Kubeflow Pipelines on GCP. 
-description: Build, deploy and run a Kubeflow Pipeline on Google Cloud Platform.
+name: Manage Kubeflow Pipelines on any Kubeflow cluster. 
+description: Build, deploy and run a Kubeflow Pipeline on any Kubeflow cluster.
 author: Niklas Hansson
 inputs:
   KUBEFLOW_URL:
     description: The endpoint where your Kubeflow UI is running. 
-    required: true
+    required: false
   CLIENT_ID:
     description: The IAP client id, which was specified when the kubeflow deployment where setup using IAP.
-    require: true
+    require: false
   PIPELINE_CODE_PATH:
     description: The full path name including the filename of the python file that describes the pipeline you want to run on Kubeflow.  This should be relative to the root of the GitHub repository where the Action is triggered.
     require: true
@@ -16,10 +16,10 @@ inputs:
     require: true
   ENCODED_GOOGLE_APPLICATION_CREDENTIALS:
     description: The base64 encoded google credentials
-    required: true
+    required: false
   GOOGLE_APPLICATION_CREDENTIALS:
     description: The path to the decoded google credentials
-    required: true
+    required: false
   EXPERIMENT_NAME: 
     description: The name of the experiment name within which the kubeflow experiment should run
     required: false
